app/style/Governance.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.proposals-community-header,
.consensus-changes-header {
  padding: 30px 30px 30px 100px;
  margin: -45px -80px 0px -65px;
  display: flex;
  flex-direction: column;
  background-color: var(--disabled-background-color);
  color: var(--title-text-and-button-background);
  min-height: 110px;


  .proposals-community-header-title {
    font-size: 21px;
    line-height: 27px;
    margin-bottom: 10px;

  }

  .proposals-community-header-description {
    font-size: 13px;
    line-height: 19px;
    margin-top: 0;
    width: 60%;

    > a:hover {
      color: var(--title-text-and-button-background-hovered);
      cursor: pointer;
    }
  }

  .links {
    position: absolute;
    right: 80px;

    > a:not(.info-modal-button) {
      font-size: 13px;
      line-height: 17px;
      display: inline-block;
      border-radius: 5px;
      padding: 6px 15px;
      margin: 4px;
      text-decoration: none;
      color: var(--background-back-color);
      background-color: var(--title-text-and-button-background);
      cursor: pointer;

      &:hover {
        background-color: var(--title-text-and-button-background-hovered);
      }
    }
  }

  .text {
    color: var(--stroke-color-hovered);
  }
}

.consensus-changes-header {
  background-color: var(--disabled-background-color-lighter);
}

.proposals-status-links {
  padding: 10px 30px 10px 100px;
  margin: 0px -80px 0px -60px;
  background-color: var(--disabled-background-color-lighter);
  > a {
    margin-right: 2em;
    text-decoration: none;
    padding: 4px 9px;
    color: var(--title-text-and-button-background);

    &.active {
      background-color: var(--background-back-color);
      border-radius: 5px;
    }

    &:hover:not(.active) {
      color: var(--title-text-and-button-background-hovered);
    }
  }
}

.no-proposals-indicator {
  margin-top: 20px;
  margin-left: 38px;
  font-size: 120%;
  padding: 1em;
}

.proposal-list-wrapper {
  height: 100%;
}

.proposal-list {
  margin-top: 20px;
  margin-left: 38px;
  background-color: var(--background-back-color);
  &.ended {
    background-color: var(--disabled-background-color);
    >.proposal-list-item.passed {
      border-left: 2px solid var(--vote-yes-color);
    }
    >.proposal-list-item.declined {
      border-left: 2px solid var(--vote-no-color);
    }
    > .proposal-list-item {
      > .info {
        > .proposal-name {
          color: var(--stroke-color-hovered);
        }
      }
    }
  }
  
  > .proposal-list-item {
    padding: 21px 20px 2px 20px;
    display: flex;
    border-left: 2px solid var(--background-back-color);
    border-bottom: 2px solid var(--background-container);
    cursor: pointer;
    height: 31px;
    background-image: @arrow-right-gray-icon;
    background-repeat: no-repeat;
    background-position: top right;
    background-origin: content-box;
    background-size: 5px 10px;

    &.proposal-modified-since-last-access {
      background-color: var(--background-hovered);
    }

    &:hover {
      background-image: @arrow-right-blue-icon;

      > .info > .proposal-name {
        color: var(--input-color);
      }
    }
    > .info {
      margin-top: -3px;
      > .proposal-name {
        font-size: 13px;
        line-height: 17px;
        color: var(--input-color-default);
      }

      > .proposal-token {
        font-size: 11px;
        line-height: 14px;
        color: var(--stroke-color-default);
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        width: 100px;
      }

      > .proposal-timestamp {
        font-size: 11px;
        line-height: 14px;
        color: var(--stroke-color-default);
        position: absolute;
        right: 100px;
        margin-top: -15px;
      }
    }
    > .proposal-vote-choice {
      width: 6px;
      height: 6px;
      border-radius: 100px;
      background-color: var(--vote-abstain-color);
      position: absolute;
      right: 280px;
      margin-top: 3px;
      &.yes {
        background-color: var(--vote-yes-color);
      }
      &.no {
        background-color: var(--vote-no-color);
      }
    }
    > .proposal-vote-result {
      margin-top: -3px;
      font-size: 11px;
      line-height: 14px;
      position: absolute;
      right: 130px;
      text-transform: capitalize;
      display: flex;
      flex-direction: column;
      .proposal-vote-choice-area {
        display: flex;
      }
      .proposal-vote-choice {
        width: 6px;
        height: 6px;
        border-radius: 100px;
        background-color: var(--vote-abstain-color);
        margin-top: 4px;
        margin-right: 5px;
        &.yes {
          background-color: var(--vote-yes-color);
        }
        &.no {
          background-color: var(--vote-no-color);
        }
      }
      .proposal-vote-choice-text {
        color: var(--stroke-color-hovered);
      }
      > .proposal-vote-passage {
        color: var(--stroke-color-default);
        width: 80px;
        margin-top: 2px;
      }
    }
    > .voting-progress-indicator {
      width: 150px;
      height: 5px;
      position: absolute;
      right: 120px;
      margin-top: -7px;

      > .voting-progress-yes,
      > .voting-progress-no {
        min-width: 10px;
      }
      > div {
        margin-right: -5px;
      }
    }
  }
}

.proposal-details-overview {
  background-color: var(--background-back-color);
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-top: 22px;
  min-height: 200px;

  .proposal-details-overview-info {
    padding: 20px 10px 15px 40px;
    max-width: 49%;
  }

  .proposal-details-title {
    font-size: 19px;
    line-height: 24px;
    color: var(--input-color-default);
  }

  .proposal-details-token {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    width: 100px;
  }

  .proposal-details-token a {
    font-size: 13px;
    line-height: 19px;
    color: var(--stroke-color-hovered);
    text-decoration: none;
    cursor: pointer;
  }

  .proposal-details-token a:hover {
    color: var(--stroke-color-default);
  }

  .proposal-details-overview-voting {
    background-color: var(--disabled-background-color-lighter);
    padding: 30px 20px;
    width: 284px;
    height: 60px;

    .go-back-icon-button {
      margin: -20px -12px 0px 0px;
      float: right;
      cursor: pointer;
      &:hover {
        opacity: 0.7;
      }
    }

    .button {
      padding: 6px 18px;
      position: relative;
      top: -4px;
      left: 158px;
    }

    .proposal-details-no-tickets,
    .proposal-details-voting-preference,
    .proposal-details-voting-not-voting,
    .proposal-details-voting-voted {
      font-size: 13px;
      line-height: 16px;
      margin-bottom: 15px;
      height: 64px;
    }

    .proposal-details-updating-vote-choice {
      margin-top: 15px;
      height: 64px;
    }

    .proposal-details-voting-preference-title {
      margin-bottom: 15px;
    }

    .proposal-details-no-tickets {
      background-size: 30px 30px;
      background-position: 0 50%;
      background-repeat: no-repeat;
      background-image: @ticket-voted-grey-icon;
      width: 157px;
      padding-left: 40px;
    }

  }

  .proposal-details-overview-fields {
    margin-top: 11px;
  }

  .proposal-details-overview-field {
    .label {
      color: var(--stroke-color-hovered);
      display: inline-block;
      margin-right: 0.5em;
      width: 100px;
      text-align: right;
      vertical-align: middle;
    }

    .value {
      color: var(--input-color-default);
      display: inline-block;
      vertical-align: middle;
      max-width: 229px;
    }

    .time-value {
      font-weight: bold;
      margin-right: 0.2em;
    }
  }

  .proposal-details-voting-progress {
    width: 100%;
    height: 60px;
    padding: 10px 30px;

    .voting-progress-indicator {
      height: 5px;
    }
  }
}

.proposal-details-text {
  overflow: auto;
  margin-top: 20px;
  p {
    word-wrap: break-word;
  }
}

.proposal-details-voting-progress-counts {
  text-align: right;
  padding-right: 5px;
  font-weight: 600;
  font-size: 13px;
  line-height: 19px;

  > div {
    width: 6px;
    height: 6px;
    display: inline-block;
    border-radius: 100px;
    margin: 0px 5px 0px 20px;
  }

  .yes-count-box {
    background-color: var(--vote-yes-color);
  }

  .no-count-box {
    background-color: var(--vote-no-color);
  }

  .abstain-count-box {
    background-color: var(--vote-abstain-color);
  }
}

.proposal-loading-page {
  width: 100%;
  text-align: center;
}

.politeia-loading-indicator {
  background-size: 100%;
  background-image: @politeia-loading-icon;
  background-position: center;
  background-repeat: no-repeat;
  display: inline-block;
  width: 256px;
  height: 256px;
}

.proposal-vote-confirmation {
  background-color: var(--background-container);
  font-size: 27px;
  line-height: 34px;
  margin-left: 10px;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
  flex-direction: row;
  text-transform: capitalize;

  >.yes-proposal {
    width: 12px;
    height: 12px;
    border-radius: 100px;
    background-color: var(--vote-yes-color);
    margin-top: 13px;
    margin-right: 5px;
  }
  >.no-proposal {
    width: 12px;
    height: 12px;
    border-radius: 100px;
    background-color: var(--vote-no-color);
    margin-top: 13px;
    margin-right: 5px;
  }
}

.proposal-vote-option {
  margin-bottom: 10px;

  input[type="radio"] {
    position: absolute;
    opacity: 0;
    + .radio-label {
      &:before {
        content: '';
        background: var(--disabled-background-color-lighter);
        border-radius: 100%;
        border: 1px solid var(--disabled-color);
        display: inline-block;
        width: 14px;
        height: 14px;
        position: relative;
        cursor: pointer;
        text-align: center;
        transition: all 250ms ease;
        margin-bottom: -3px;
      }
      &:empty {
        &:before {
          margin-right: 5px;
          text-transform:  capitalize;
        }
      }
    }

    + .radio-label.yes {
      &:before {
      border: 1px solid var(--vote-yes-color);
      }
    }

    + .radio-label.no {
      &:before {
      border: 1px solid var(--vote-no-color);
      }
    }

    &:checked {
      + .radio-label.yes {
        &:before {
          background-color: var(--vote-yes-color);
          box-shadow: inset 0 0 0 3px var(--disabled-background-color-lighter);
        }
      }
      + .radio-label.no {
        &:before {
          background-color: var(--vote-no-color);
          box-shadow: inset 0 0 0 3px var(--disabled-background-color-lighter);
        }
      }
    }
    &:focus {
      + .radio-label.no {
        &:before {
          outline: none;
          border-color: var(--vote-no-color);
        }
      }
      + .radio-label.yes {
        &:before {
          outline: none;
          border-color: var(--vote-yes-color);
        }
      }
    }
    &:disabled {
      + .radio-label {
        &:before {
          box-shadow: inset 0 0 0 4px var(--disabled-background-color-lighter);
          border-color: var(--disabled-color);
          background: var(--disabled-background-color-lighter);
        }
      }
    }
  }
}

.proposal-list-link-count {
  position: absolute;
  display: inline-block;
  border: 1px solid var(--disabled-color);
  border-radius: 50%;
  width: 1.5em;
  line-height: 1.5em;
  font-size: 9px;
}

